option('libgeoclue',
        type: 'boolean', value: true,
        description: 'Enable convenience library')
option('introspection',
        type: 'boolean', value: true,
        description: 'Enable convenience library introspection generation')
option('vapi',
        type: 'boolean', value: true,
        description: 'Enable convenience library vapi generation (ignored if introspection is disabled)')
option('gtk-doc',
       type: 'boolean', value: true,
       description: 'Whether to generate the API reference for Geocode-GLib')
option('wifi-source',
       type: 'boolean', value: true,
       description: 'Enable WiFi source')
option('3g-source',
       type: 'boolean', value: true,
       description: 'Enable 3G source (requires ModemManager)')
option('cdma-source',
       type: 'boolean', value: true,
       description: 'Enable CDMA source (requires ModemManager)')
option('modem-gps-source',
       type: 'boolean', value: true,
       description: 'Enable modem GPS source (requires ModemManager)')
option('nmea-source',
       type: 'boolean', value: true,
       description: 'Enable network NMEA source (requires Avahi libraries)')
option('static-source',
       type: 'boolean', value: true,
       description: 'Enable static source (geolocation file)')
option('ip-source',
       type: 'boolean', value: true,
       description: 'Enable ip source (GeoIP)')
option('compass',
       type: 'boolean', value: true,
       description: 'Enable setting heading from net.hadess.SensorProxy compass')
option('enable-backend',
       type: 'boolean', value: true,
       description: 'Enable backend (the geoclue service)')
option('demo-agent',
       type: 'boolean', value: true,
       description: 'Build demo agent')
option('dbus-sys-dir',
       type: 'string',
       description: 'where D-BUS system.d directory is')
option('systemd-system-unit-dir',
       type: 'string',
       description: 'Directory for systemd service files')
option('dbus-srv-user',
       type: 'string', value: 'root',
       description: 'The user (existing) as which the service will run')
option('default-wifi-url',
       type: 'string', value: 'https://api.beacondb.net/v1/geolocate',
       description: 'Default URL for Ichnaea-compatible WiFi geolocation')
option('default-wifi-submit-url',
       type: 'string', value: 'https://api.beacondb.net/v2/geosubmit',
       description: 'Default URL for Ichnaea-compatible WiFi location submission')
